tests/fail/ambiguous_build_recipe.werk
default target = "foofoo"

build "%foo" {
    info "<out>"
}

build "foo%" {
    info "<out>"
}
